@@ -189,7 +189,7 @@ body {
 
 <p><strong>save_hpmp</strong> | <code>bool</code> | When saving the game, keep the hero's current HP and MP.</p>
 
-<p><strong>corpse_timeout</strong> | <code>duration</code> | Duration that a corpse can exist on the map in 'ms' or 's'.</p>
+<p><strong>corpse_timeout</strong> | <code>duration</code> | Duration that a corpse can exist on the map in 'ms' or 's'. Use 0 to keep corpses indefinitely.</p>
 
 <p><strong>sell_without_vendor</strong> | <code>bool</code> | Allows selling items when not at a vendor via CTRL-Click.</p>
 
